# clobster

./: .commitlintrc.json  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  release.toml
.config/: nextest.toml
.github/: copilot-instructions.md
.github/workflows/: ci-checks.yml  ci.yml  docker-release.yml  docs.yml  release-tag.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: core-types.md  orderbook.md  state.md  strategy.md
docs/src/architecture/: data-flow.md  overview.md  state-management.md
docs/src/development/: contributing.md  release.md  testing.md
docs/src/getting-started/: configuration.md  installation.md  quick-start.md
docs/src/strategies/: built-in.md  custom.md  introduction.md  mean-reversion.md  momentum.md  risk-management.md  spread.md
src/: app.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  converter.rs  mod.rs
src/components/: mod.rs
src/config/: mod.rs  settings.rs
src/events/: handler.rs  input.rs  mod.rs
src/state/: app_state.rs  market_state.rs  mod.rs  order_state.rs  orderbook_state.rs  portfolio_state.rs
src/strategy/: context.rs  engine.rs  mod.rs  risk.rs  signal.rs  traits.rs
src/strategy/strategies/: mean_reversion.rs  mod.rs  momentum.rs  spread.rs
src/ui/: layout.rs  mod.rs
src/ui/widgets/: help.rs  market_list.rs  mod.rs  notifications.rs  order_list.rs  orderbook.rs  position_list.rs  status_bar.rs  tab_bar.rs
